EKS LABS/EKS Zero Downtime/green-service-2048.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-service-2048
  namespace: game-2048
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 30838
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/name: green-app-2048
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
