EKS LABS/EKS Zero Downtime/ingress-2048.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  generation: 2
  name: ingress-2048
  namespace: game-2048
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - backend:
          service:
            name: green-service-2048
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: blue-service-2048
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - hostname: k8s-game2048-ingress2-XXXXXXXXXXXXXXXXX
